--- a/Parsers/Parser.ipynb
+++ b/Parsers/Parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "id": "98b8535d",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,8 @@
     "    results = []\n",
     "    count = [0] * len(alias_list)\n",
     "\n",
-    "    common_words = ['cap','via','for','can','not','cell','large','has','light','the', 'be', 'to', 'of',\\\n",
+    "    common_words = ['art','ape','map','goat','fish','was','ray','end','cap','via','for','can','not','cell',\\\n",
+    "                    'large','has','light','the', 'be', 'to', 'of',\\\n",
     "                    'and', 'a', 'in', 'that', 'have', 'I', 'it', 'for', 'not', 'on', 'with',\\\n",
     "                    'he', 'as', 'you', 'do', 'at', 'this', 'but', 'his', 'by', 'from', 'they',\\\n",
     "                    'we', 'say', 'her', 'she', 'or', 'an', 'will', 'my', 'one', 'all', 'would',\\\n",
@@ -44,7 +45,7 @@
     "                        #print(\"Found in title: \" + aliases[0] + \" \" + cur)\n",
     "                        break\n",
     "                ## MAYBE ADD LENGTH RESTRICTION, len(str(cur))>5 and str(cur).lower() in titleStr\n",
-    "                elif str(cur).lower() in titleStr and str(cur).lower() not in common_words:\n",
+    "                elif len(str(cur))>3 and str(cur).lower() in titleStr and str(cur).lower() not in common_words:\n",
     "                    lower = str(cur).lower()\n",
     "                    countTitle = (titleStr.count(\" \" + lower + \" \") + titleStr.count(\" \" + lower + \".\") + \\\n",
     "                                  titleStr.count(\" \" + lower + \",\") + titleStr.count(\" \" + lower + \"'\") + \\\n",
@@ -81,7 +82,7 @@
     "                        count[alias_list.index(aliases)] += countAbstract\n",
     "                        #print(\"Found in abstract: \" + aliases[0] + \" \" + cur)\n",
     "                    # print(str(temp) + \" gene: \"+ str(y))\n",
-    "                elif str(cur).lower() in abstractStr and str(cur).lower() not in common_words:\n",
+    "                elif len(str(cur))>3 and str(cur).lower() in abstractStr and str(cur).lower() not in common_words:\n",
     "                    lower = str(cur).lower()\n",
     "                    countAbstract = 3 * (abstractStr.count(\" \" + lower + \" \") + abstractStr.count(\" \" + lower + \".\") + \\\n",
     "                                         abstractStr.count(\" \" + lower + \",\") + abstractStr.count(\" \" + lower + \"'\") + \\\n",
@@ -122,7 +123,7 @@
     "                    if countClaim != 0:\n",
     "                        count[alias_list.index(aliases)] += countClaim\n",
     "                        #print(\"Found in claim: \" + aliases[0] + \" \" + cur)\n",
-    "                elif str(cur).lower() in claimStr and str(cur).lower() not in common_words:\n",
+    "                elif len(str(cur))>3 and str(cur).lower() in claimStr and str(cur).lower() not in common_words:\n",
     "                    lower = str(cur).lower()\n",
     "                    countClaim = (claimStr.count(\" \" + lower + \" \") + claimStr.count(\" \" + lower + \".\") + \\\n",
     "                                 claimStr.count(\" \" + lower + \",\") + claimStr.count(\" \" + lower + \"'\") + \\\n",
@@ -133,12 +134,42 @@
     "                        count[alias_list.index(aliases)] += countClaim\n",
     "                        #print(\"Found in claim (lowercase): \" + aliases[0] + \" \" + cur)\n",
     "\n",
+    "    #DESCRIPTION\n",
+    "    description = driver.find_element_by_id(\"descriptionText\")\n",
+    "    descriptionStrInit = description.text\n",
+    "    desList = descriptionStrInit.split()[:1000]\n",
+    "    descriptionStr = ' '.join(map(str, desList))\n",
+    "    #print(descriptionStr)\n",
+    "    for aliases in alias_list:\n",
+    "        for cur in aliases:\n",
+    "            if len(str(cur)) >= 3:\n",
+    "                # print(\"entered\")\n",
+    "                if str(cur) in descriptionStr:\n",
+    "                    countDescription = (descriptionStr.count(\" \" + str(cur) + \" \") + descriptionStr.count(\" \" + str(cur) + \".\") + \\\n",
+    "                                 descriptionStr.count(\" \" + str(cur) + \",\") + descriptionStr.count(\" \" + str(cur) + \"'\") + \\\n",
+    "                                 descriptionStr.count(\" \" + str(cur) + \"/\") + descriptionStr.count(\"/\" + str(cur) + \" \") + \\\n",
+    "                                 descriptionStr.count(\" \" + str(cur) + \":\") + descriptionStr.count(\"-\" + str(cur) + \" \") + \\\n",
+    "                                 descriptionStr.count(\"(\" + str(cur) + \")\") + descriptionStr.count(\"\\\"\" + str(cur) + \"\\\"\"))\n",
+    "                    if countDescription != 0:\n",
+    "                        count[alias_list.index(aliases)] += countDescription\n",
+    "                        #print(\"Found in description: \" + aliases[0] + \" \" + cur)\n",
+    "                elif len(str(cur))>3 and str(cur).lower() in descriptionStr and str(cur).lower() not in common_words:\n",
+    "                    lower = str(cur).lower()\n",
+    "                    countDescription = (descriptionStr.count(\" \" + lower + \" \") + descriptionStr.count(\" \" + lower + \".\") + \\\n",
+    "                                 descriptionStr.count(\" \" + lower + \",\") + descriptionStr.count(\" \" + lower + \"'\") + \\\n",
+    "                                 descriptionStr.count(\" \" + lower + \"/\") + descriptionStr.count(\"/\" + lower + \" \") + \\\n",
+    "                                 descriptionStr.count(\" \" + lower + \":\") + descriptionStr.count(\"-\" + lower + \" \") + \\\n",
+    "                                 descriptionStr.count(\"(\" + lower + \")\") + descriptionStr.count(\"\\\"\" + lower + \"\\\"\"))\n",
+    "                    if countDescription != 0:\n",
+    "                        count[alias_list.index(aliases)] += countDescription\n",
+    "                        #print(\"Found in description (lowercase): \" + aliases[0] + \" \" + cur)\n",
+    "\n",
     "    sort = sorted(zip(count, genes), reverse=True)\n",
     "    count = 0\n",
     "    r = []\n",
     "    print_stuff = []\n",
     "    for x in sort:\n",
-    "        if count >= 3:\n",
+    "        if count >= 3 or x[0]==0:\n",
     "            break\n",
     "        elif x[1] not in results:\n",
     "            r.append(x)\n",
@@ -146,22 +177,28 @@
     "            count += 1\n",
     "        elif x[1] in results:\n",
     "            print_stuff.append(x)\n",
-    "\n",
+    "    \n",
+    "    #print(\"r:\")\n",
+    "    #for x in r:\n",
+    "    #    print(x)\n",
+    "    \n",
     "    for x in r:\n",
     "        if x[0] >= target_frequency:\n",
     "            results.append(x[1])\n",
-    "        elif x[0] > 0 and len(results) == 0:\n",
+    "        elif x[0] > 0 and len(results) < 3:\n",
+    "            results.append(x[1])\n",
+    "        elif x[0] > 0 and len(results) >=3:\n",
     "            results.append(x[1])\n",
     "            break\n",
     "\n",
     "    print(print_stuff)\n",
     "\n",
-    "    return results\n"
+    "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
    "id": "173e397b",
    "metadata": {},
    "outputs": [
@@ -169,9 +206,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, 'ZZZ3'), (0, 'ZZEF1'), (0, 'ZYX')]\n",
-      "[]\n",
-      "Genes found\n"
+      "[(1, 'UROD'), (1, 'CALCA')]\n",
+      "Time for method: 11.490266799926758\n",
+      "Genes found\n",
+      "UROD\n",
+      "CALCA\n"
      ]
     }
    ],
@@ -191,8 +230,13 @@
     "gene = genes()\n",
     "#print(l)\n",
     "\n",
-    "#list = parse(driver,l,gene,3,16)\n",
-    "list = parse_only_genes(driver,gene,0,16)\n",
+    "t0=time.time()\n",
+    "list = parse(driver,l,gene,3,10)\n",
+    "t1=time.time()\n",
+    "\n",
+    "total = t1-t0\n",
+    "print(\"Time for method: \"+str(total))\n",
+    "#list = parse_only_genes(driver,gene,0,16)\n",
     "\n",
     "print(\"Genes found\")\n",
     "for x in list:\n",
@@ -203,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "794d156b",
    "metadata": {},
    "outputs": [],
@@ -217,16 +261,17 @@
     "    results = []\n",
     "    count = [0] * len(genes)\n",
     "\n",
-    "    common_words = ['cap','via','for', 'can', 'not', 'cell', 'large', 'has', 'light', 'the', 'be', 'to', 'of', \\\n",
-    "                    'and', 'a', 'in', 'that', 'have', 'I', 'it', 'for', 'not', 'on', 'with', \\\n",
-    "                    'he', 'as', 'you', 'do', 'at', 'this', 'but', 'his', 'by', 'from', 'they', \\\n",
-    "                    'we', 'say', 'her', 'she', 'or', 'an', 'will', 'my', 'one', 'all', 'would', \\\n",
-    "                    'there', 'their', 'what', 'so', 'up', 'out', 'if', 'about', 'who', 'get', \\\n",
-    "                    'which', 'go', 'me', 'when', 'make', 'can', 'like', 'time', 'no', 'just', \\\n",
-    "                    'him', 'know', 'take', 'people', 'into', 'year', 'your', 'good', 'some', \\\n",
-    "                    'could', 'them', 'see', 'other', 'than', 'then', 'now', 'look', 'only', \\\n",
-    "                    'come', 'its', 'over', 'think', 'also', 'back', 'after', 'use', 'two', \\\n",
-    "                    'how', 'our', 'work', 'first', 'well', 'way', 'even', 'new', 'want', \\\n",
+    "    common_words = ['art','ape','map','goat','fish','was','ray','end','cap','via','for','can','not','cell',\\\n",
+    "                    'large','has','light','the', 'be', 'to', 'of',\\\n",
+    "                    'and', 'a', 'in', 'that', 'have', 'I', 'it', 'for', 'not', 'on', 'with',\\\n",
+    "                    'he', 'as', 'you', 'do', 'at', 'this', 'but', 'his', 'by', 'from', 'they',\\\n",
+    "                    'we', 'say', 'her', 'she', 'or', 'an', 'will', 'my', 'one', 'all', 'would',\\\n",
+    "                    'there', 'their', 'what', 'so', 'up', 'out', 'if', 'about', 'who', 'get',\\\n",
+    "                    'which', 'go', 'me', 'when', 'make', 'can', 'like', 'time', 'no', 'just',\\\n",
+    "                    'him', 'know', 'take', 'people', 'into', 'year', 'your', 'good', 'some',\\\n",
+    "                    'could', 'them', 'see', 'other', 'than', 'then', 'now', 'look', 'only',\\\n",
+    "                    'come', 'its', 'over', 'think', 'also', 'back', 'after', 'use', 'two',\\\n",
+    "                    'how', 'our', 'work', 'first', 'well', 'way', 'even', 'new', 'want',\\\n",
     "                    'because', 'any', 'these', 'give', 'day', 'most', 'us']\n",
     "\n",
     "    # TITLE\n",
@@ -249,7 +294,7 @@
     "                    #print(\"Found in title: \" + cur)\n",
     "                    break\n",
     "                ## MAYBE ADD LENGTH RESTRICTION, len(str(cur))>5 and str(cur).lower() in titleStr\n",
-    "            elif str(cur).lower() in titleStr and str(cur).lower() not in common_words:\n",
+    "            elif len(str(cur))>3 and str(cur).lower() in titleStr and str(cur).lower() not in common_words:\n",
     "                lower = str(cur).lower()\n",
     "                countTitle = (titleStr.count(\" \" + lower + \" \") + titleStr.count(\" \" + lower + \".\") + \\\n",
     "                              titleStr.count(\" \" + lower + \",\") + titleStr.count(\" \" + lower + \"'\") + \\\n",
@@ -284,7 +329,7 @@
     "                    count[genes.index(cur)] += countAbstract\n",
     "                    #print(\"Found in abstract: \" + cur)\n",
     "                # print(str(temp) + \" gene: \"+ str(y))\n",
-    "            elif str(cur).lower() in abstractStr and str(cur).lower() not in common_words:\n",
+    "            elif len(str(cur))>3 and str(cur).lower() in abstractStr and str(cur).lower() not in common_words:\n",
     "                lower = str(cur).lower()\n",
     "                countAbstract = 3 * (abstractStr.count(\" \" + lower + \" \") + abstractStr.count(\" \" + lower + \".\") + \\\n",
     "                                     abstractStr.count(\" \" + lower + \",\") + abstractStr.count(\" \" + lower + \"'\") + \\\n",
@@ -324,7 +369,7 @@
     "                if countClaim != 0:\n",
     "                    count[genes.index(cur)] += countClaim\n",
     "                    #print(\"Found in claim: \" + cur)\n",
-    "            elif str(cur).lower() in claimStr and str(cur).lower() not in common_words:\n",
+    "            elif len(str(cur))>3 and str(cur).lower() in claimStr and str(cur).lower() not in common_words:\n",
     "                lower = str(cur).lower()\n",
     "                countClaim = (claimStr.count(\" \" + lower + \" \") + claimStr.count(\" \" + lower + \".\") + \\\n",
     "                             claimStr.count(\" \" + lower + \",\") + claimStr.count(\" \" + lower + \"'\") + \\\n",
@@ -335,12 +380,41 @@
     "                    count[genes.index(cur)] += countClaim\n",
     "                    #print(\"Found in claim (lowercase): \" + cur)\n",
     "\n",
+    "    #DESCRIPTION\n",
+    "    description = driver.find_element_by_id(\"descriptionText\")\n",
+    "    descriptionStrInit = description.text\n",
+    "    desList = descriptionStrInit.split()[:1000]\n",
+    "    descriptionStr = ' '.join(map(str, desList))\n",
+    "    #print(descriptionStr)\n",
+    "    for cur in aliases:\n",
+    "        if len(str(cur)) >= 3:\n",
+    "            # print(\"entered\")\n",
+    "            if str(cur) in descriptionStr:\n",
+    "                countDescription = (descriptionStr.count(\" \" + str(cur) + \" \") + descriptionStr.count(\" \" + str(cur) + \".\") + \\\n",
+    "                                    descriptionStr.count(\" \" + str(cur) + \",\") + descriptionStr.count(\" \" + str(cur) + \"'\") + \\\n",
+    "                                    descriptionStr.count(\" \" + str(cur) + \"/\") + descriptionStr.count(\"/\" + str(cur) + \" \") + \\\n",
+    "                                    descriptionStr.count(\" \" + str(cur) + \":\") + descriptionStr.count(\"-\" + str(cur) + \" \") + \\\n",
+    "                                    descriptionStr.count(\"(\" + str(cur) + \")\") + descriptionStr.count(\"\\\"\" + str(cur) + \"\\\"\"))\n",
+    "                if countDescription != 0:\n",
+    "                    count[alias_list.index(aliases)] += countDescription\n",
+    "                    #print(\"Found in description: \" + aliases[0] + \" \" + cur)\n",
+    "            elif len(str(cur))>3 and str(cur).lower() in descriptionStr and str(cur).lower() not in common_words:\n",
+    "                lower = str(cur).lower()\n",
+    "                countDescription = (descriptionStr.count(\" \" + lower + \" \") + descriptionStr.count(\" \" + lower + \".\") + \\\n",
+    "                                    descriptionStr.count(\" \" + lower + \",\") + descriptionStr.count(\" \" + lower + \"'\") + \\\n",
+    "                                    descriptionStr.count(\" \" + lower + \"/\") + descriptionStr.count(\"/\" + lower + \" \") + \\\n",
+    "                                    descriptionStr.count(\" \" + lower + \":\") + descriptionStr.count(\"-\" + lower + \" \") + \\\n",
+    "                                    descriptionStr.count(\"(\" + lower + \")\") + descriptionStr.count(\"\\\"\" + lower + \"\\\"\"))\n",
+    "                if countDescription != 0:\n",
+    "                    count[alias_list.index(aliases)] += countDescription\n",
+    "                    #print(\"Found in description (lowercase): \" + aliases[0] + \" \" + cur)\n",
+    "                    \n",
     "    sort = sorted(zip(count, genes), reverse=True)\n",
     "    count = 0\n",
     "    r = []\n",
     "    print_stuff = []\n",
     "    for x in sort:\n",
-    "        if count >= 3:\n",
+    "        if count >= 3 or x[0]==0:\n",
     "            break\n",
     "        elif x[1] not in results:\n",
     "            r.append(x)\n",
@@ -348,24 +422,28 @@
     "            count += 1\n",
     "        elif x[1] in results:\n",
     "            print_stuff.append(x)\n",
-    "\n",
+    "    \n",
+    "    #print(\"r:\")\n",
+    "    #for x in r:\n",
+    "    #    print(x)\n",
+    "    \n",
     "    for x in r:\n",
-    "        if int(x[0]) >= target_frequency:\n",
-    "            #print(x[1] + \" appended\")\n",
+    "        if x[0] >= target_frequency:\n",
     "            results.append(x[1])\n",
-    "        elif int(x[0] > 0) and len(results) == 0:\n",
+    "        elif x[0] > 0 and len(results) < 3:\n",
+    "            results.append(x[1])\n",
+    "        elif x[0] > 0 and len(results) >=3:\n",
     "            results.append(x[1])\n",
     "            break\n",
     "\n",
-    "    #print(print_stuff)\n",
-    "   # print(results)\n",
+    "    print(print_stuff)\n",
     "\n",
     "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "6fb999d0",
    "metadata": {},
    "outputs": [],
@@ -390,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "01bcf523",
    "metadata": {},
    "outputs": [],
@@ -413,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "abaeff21",
    "metadata": {},
    "outputs": [],
@@ -429,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7516300d",
+   "id": "058de58b",
    "metadata": {},
    "outputs": [],
    "source": []
