--- a/heck/ParsePatent.ipynb
+++ b/heck/ParsePatent.ipynb
@@ -11,7 +11,8 @@
     "    results = []\n",
     "    count = [0] * len(alias_list)\n",
     "\n",
-    "    common_words = ['ray','end','cap','via','for','can','not','cell','large','has','light','the', 'be', 'to', 'of',\\\n",
+    "    common_words = ['art','ape','map','goat','fish','was','ray','end','cap','via','for','can','not','cell',\\\n",
+    "                    'large','has','light','the', 'be', 'to', 'of',\\\n",
     "                    'and', 'a', 'in', 'that', 'have', 'I', 'it', 'for', 'not', 'on', 'with',\\\n",
     "                    'he', 'as', 'you', 'do', 'at', 'this', 'but', 'his', 'by', 'from', 'they',\\\n",
     "                    'we', 'say', 'her', 'she', 'or', 'an', 'will', 'my', 'one', 'all', 'would',\\\n",
@@ -44,7 +45,7 @@
     "                        #print(\"Found in title: \" + aliases[0] + \" \" + cur)\n",
     "                        break\n",
     "                ## MAYBE ADD LENGTH RESTRICTION, len(str(cur))>5 and str(cur).lower() in titleStr\n",
-    "                elif str(cur).lower() in titleStr and str(cur).lower() not in common_words:\n",
+    "                elif len(str(cur))>3 and str(cur).lower() in titleStr and str(cur).lower() not in common_words:\n",
     "                    lower = str(cur).lower()\n",
     "                    countTitle = (titleStr.count(\" \" + lower + \" \") + titleStr.count(\" \" + lower + \".\") + \\\n",
     "                                  titleStr.count(\" \" + lower + \",\") + titleStr.count(\" \" + lower + \"'\") + \\\n",
@@ -81,7 +82,7 @@
     "                        count[alias_list.index(aliases)] += countAbstract\n",
     "                        #print(\"Found in abstract: \" + aliases[0] + \" \" + cur)\n",
     "                    # print(str(temp) + \" gene: \"+ str(y))\n",
-    "                elif str(cur).lower() in abstractStr and str(cur).lower() not in common_words:\n",
+    "                elif len(str(cur))>3 and str(cur).lower() in abstractStr and str(cur).lower() not in common_words:\n",
     "                    lower = str(cur).lower()\n",
     "                    countAbstract = 3 * (abstractStr.count(\" \" + lower + \" \") + abstractStr.count(\" \" + lower + \".\") + \\\n",
     "                                         abstractStr.count(\" \" + lower + \",\") + abstractStr.count(\" \" + lower + \"'\") + \\\n",
@@ -122,7 +123,7 @@
     "                    if countClaim != 0:\n",
     "                        count[alias_list.index(aliases)] += countClaim\n",
     "                        #print(\"Found in claim: \" + aliases[0] + \" \" + cur)\n",
-    "                elif str(cur).lower() in claimStr and str(cur).lower() not in common_words:\n",
+    "                elif len(str(cur))>3 and str(cur).lower() in claimStr and str(cur).lower() not in common_words:\n",
     "                    lower = str(cur).lower()\n",
     "                    countClaim = (claimStr.count(\" \" + lower + \" \") + claimStr.count(\" \" + lower + \".\") + \\\n",
     "                                 claimStr.count(\" \" + lower + \",\") + claimStr.count(\" \" + lower + \"'\") + \\\n",
@@ -133,12 +134,42 @@
     "                        count[alias_list.index(aliases)] += countClaim\n",
     "                        #print(\"Found in claim (lowercase): \" + aliases[0] + \" \" + cur)\n",
     "\n",
+    "    #DESCRIPTION\n",
+    "    description = driver.find_element_by_id(\"descriptionText\")\n",
+    "    descriptionStrInit = description.text\n",
+    "    desList = descriptionStrInit.split()[:1000]\n",
+    "    descriptionStr = ' '.join(map(str, desList))\n",
+    "    #print(descriptionStr)\n",
+    "    for aliases in alias_list:\n",
+    "        for cur in aliases:\n",
+    "            if len(str(cur)) >= 3:\n",
+    "                # print(\"entered\")\n",
+    "                if str(cur) in descriptionStr:\n",
+    "                    countDescription = (descriptionStr.count(\" \" + str(cur) + \" \") + descriptionStr.count(\" \" + str(cur) + \".\") + \\\n",
+    "                                 descriptionStr.count(\" \" + str(cur) + \",\") + descriptionStr.count(\" \" + str(cur) + \"'\") + \\\n",
+    "                                 descriptionStr.count(\" \" + str(cur) + \"/\") + descriptionStr.count(\"/\" + str(cur) + \" \") + \\\n",
+    "                                 descriptionStr.count(\" \" + str(cur) + \":\") + descriptionStr.count(\"-\" + str(cur) + \" \") + \\\n",
+    "                                 descriptionStr.count(\"(\" + str(cur) + \")\") + descriptionStr.count(\"\\\"\" + str(cur) + \"\\\"\"))\n",
+    "                    if countDescription != 0:\n",
+    "                        count[alias_list.index(aliases)] += countDescription\n",
+    "                        #print(\"Found in description: \" + aliases[0] + \" \" + cur)\n",
+    "                elif len(str(cur))>3 and str(cur).lower() in descriptionStr and str(cur).lower() not in common_words:\n",
+    "                    lower = str(cur).lower()\n",
+    "                    countDescription = (descriptionStr.count(\" \" + lower + \" \") + descriptionStr.count(\" \" + lower + \".\") + \\\n",
+    "                                 descriptionStr.count(\" \" + lower + \",\") + descriptionStr.count(\" \" + lower + \"'\") + \\\n",
+    "                                 descriptionStr.count(\" \" + lower + \"/\") + descriptionStr.count(\"/\" + lower + \" \") + \\\n",
+    "                                 descriptionStr.count(\" \" + lower + \":\") + descriptionStr.count(\"-\" + lower + \" \") + \\\n",
+    "                                 descriptionStr.count(\"(\" + lower + \")\") + descriptionStr.count(\"\\\"\" + lower + \"\\\"\"))\n",
+    "                    if countDescription != 0:\n",
+    "                        count[alias_list.index(aliases)] += countDescription\n",
+    "                        #print(\"Found in description (lowercase): \" + aliases[0] + \" \" + cur)\n",
+    "\n",
     "    sort = sorted(zip(count, genes), reverse=True)\n",
     "    count = 0\n",
     "    r = []\n",
     "    print_stuff = []\n",
     "    for x in sort:\n",
-    "        if count >= 3:\n",
+    "        if count >= 3 or x[0]==0:\n",
     "            break\n",
     "        elif x[1] not in results:\n",
     "            r.append(x)\n",
@@ -146,18 +177,23 @@
     "            count += 1\n",
     "        elif x[1] in results:\n",
     "            print_stuff.append(x)\n",
-    "\n",
+    "    \n",
+    "    #print(\"r:\")\n",
+    "    #for x in r:\n",
+    "    #    print(x)\n",
+    "    \n",
     "    for x in r:\n",
     "        if x[0] >= target_frequency:\n",
     "            results.append(x[1])\n",
-    "        elif x[0] > 0 and len(results) == 0:\n",
+    "        elif x[0] > 0 and len(results) < 3:\n",
+    "            results.append(x[1])\n",
+    "        elif x[0] > 0 and len(results) >=3:\n",
     "            results.append(x[1])\n",
     "            break\n",
     "\n",
     "    print(print_stuff)\n",
     "\n",
     "    return results\n",
-    "\n",
     "\n",
     "def parse_only_genes(driver, genes, target_frequency, num_claims):\n",
     "    genes = list(genes)\n",
@@ -166,16 +202,17 @@
     "    results = []\n",
     "    count = [0] * len(genes)\n",
     "\n",
-    "    common_words = ['ray','end','cap','via','for', 'can', 'not', 'cell', 'large', 'has', 'light', 'the', 'be', 'to', 'of', \\\n",
-    "                    'and', 'a', 'in', 'that', 'have', 'I', 'it', 'for', 'not', 'on', 'with', \\\n",
-    "                    'he', 'as', 'you', 'do', 'at', 'this', 'but', 'his', 'by', 'from', 'they', \\\n",
-    "                    'we', 'say', 'her', 'she', 'or', 'an', 'will', 'my', 'one', 'all', 'would', \\\n",
-    "                    'there', 'their', 'what', 'so', 'up', 'out', 'if', 'about', 'who', 'get', \\\n",
-    "                    'which', 'go', 'me', 'when', 'make', 'can', 'like', 'time', 'no', 'just', \\\n",
-    "                    'him', 'know', 'take', 'people', 'into', 'year', 'your', 'good', 'some', \\\n",
-    "                    'could', 'them', 'see', 'other', 'than', 'then', 'now', 'look', 'only', \\\n",
-    "                    'come', 'its', 'over', 'think', 'also', 'back', 'after', 'use', 'two', \\\n",
-    "                    'how', 'our', 'work', 'first', 'well', 'way', 'even', 'new', 'want', \\\n",
+    "    common_words = ['art','ape','map','goat','fish','was','ray','end','cap','via','for','can','not','cell',\\\n",
+    "                    'large','has','light','the', 'be', 'to', 'of',\\\n",
+    "                    'and', 'a', 'in', 'that', 'have', 'I', 'it', 'for', 'not', 'on', 'with',\\\n",
+    "                    'he', 'as', 'you', 'do', 'at', 'this', 'but', 'his', 'by', 'from', 'they',\\\n",
+    "                    'we', 'say', 'her', 'she', 'or', 'an', 'will', 'my', 'one', 'all', 'would',\\\n",
+    "                    'there', 'their', 'what', 'so', 'up', 'out', 'if', 'about', 'who', 'get',\\\n",
+    "                    'which', 'go', 'me', 'when', 'make', 'can', 'like', 'time', 'no', 'just',\\\n",
+    "                    'him', 'know', 'take', 'people', 'into', 'year', 'your', 'good', 'some',\\\n",
+    "                    'could', 'them', 'see', 'other', 'than', 'then', 'now', 'look', 'only',\\\n",
+    "                    'come', 'its', 'over', 'think', 'also', 'back', 'after', 'use', 'two',\\\n",
+    "                    'how', 'our', 'work', 'first', 'well', 'way', 'even', 'new', 'want',\\\n",
     "                    'because', 'any', 'these', 'give', 'day', 'most', 'us']\n",
     "\n",
     "    # TITLE\n",
@@ -198,7 +235,7 @@
     "                    #print(\"Found in title: \" + cur)\n",
     "                    break\n",
     "                ## MAYBE ADD LENGTH RESTRICTION, len(str(cur))>5 and str(cur).lower() in titleStr\n",
-    "            elif str(cur).lower() in titleStr and str(cur).lower() not in common_words:\n",
+    "            elif len(str(cur))>3 and str(cur).lower() in titleStr and str(cur).lower() not in common_words:\n",
     "                lower = str(cur).lower()\n",
     "                countTitle = (titleStr.count(\" \" + lower + \" \") + titleStr.count(\" \" + lower + \".\") + \\\n",
     "                              titleStr.count(\" \" + lower + \",\") + titleStr.count(\" \" + lower + \"'\") + \\\n",
@@ -233,7 +270,7 @@
     "                    count[genes.index(cur)] += countAbstract\n",
     "                    #print(\"Found in abstract: \" + cur)\n",
     "                # print(str(temp) + \" gene: \"+ str(y))\n",
-    "            elif str(cur).lower() in abstractStr and str(cur).lower() not in common_words:\n",
+    "            elif len(str(cur))>3 and str(cur).lower() in abstractStr and str(cur).lower() not in common_words:\n",
     "                lower = str(cur).lower()\n",
     "                countAbstract = 3 * (abstractStr.count(\" \" + lower + \" \") + abstractStr.count(\" \" + lower + \".\") + \\\n",
     "                                     abstractStr.count(\" \" + lower + \",\") + abstractStr.count(\" \" + lower + \"'\") + \\\n",
@@ -273,7 +310,7 @@
     "                if countClaim != 0:\n",
     "                    count[genes.index(cur)] += countClaim\n",
     "                    #print(\"Found in claim: \" + cur)\n",
-    "            elif str(cur).lower() in claimStr and str(cur).lower() not in common_words:\n",
+    "            elif len(str(cur))>3 and str(cur).lower() in claimStr and str(cur).lower() not in common_words:\n",
     "                lower = str(cur).lower()\n",
     "                countClaim = (claimStr.count(\" \" + lower + \" \") + claimStr.count(\" \" + lower + \".\") + \\\n",
     "                             claimStr.count(\" \" + lower + \",\") + claimStr.count(\" \" + lower + \"'\") + \\\n",
@@ -284,12 +321,41 @@
     "                    count[genes.index(cur)] += countClaim\n",
     "                    #print(\"Found in claim (lowercase): \" + cur)\n",
     "\n",
+    "    #DESCRIPTION\n",
+    "    description = driver.find_element_by_id(\"descriptionText\")\n",
+    "    descriptionStrInit = description.text\n",
+    "    desList = descriptionStrInit.split()[:1000]\n",
+    "    descriptionStr = ' '.join(map(str, desList))\n",
+    "    #print(descriptionStr)\n",
+    "    for cur in aliases:\n",
+    "        if len(str(cur)) >= 3:\n",
+    "            # print(\"entered\")\n",
+    "            if str(cur) in descriptionStr:\n",
+    "                countDescription = (descriptionStr.count(\" \" + str(cur) + \" \") + descriptionStr.count(\" \" + str(cur) + \".\") + \\\n",
+    "                                    descriptionStr.count(\" \" + str(cur) + \",\") + descriptionStr.count(\" \" + str(cur) + \"'\") + \\\n",
+    "                                    descriptionStr.count(\" \" + str(cur) + \"/\") + descriptionStr.count(\"/\" + str(cur) + \" \") + \\\n",
+    "                                    descriptionStr.count(\" \" + str(cur) + \":\") + descriptionStr.count(\"-\" + str(cur) + \" \") + \\\n",
+    "                                    descriptionStr.count(\"(\" + str(cur) + \")\") + descriptionStr.count(\"\\\"\" + str(cur) + \"\\\"\"))\n",
+    "                if countDescription != 0:\n",
+    "                    count[alias_list.index(aliases)] += countDescription\n",
+    "                    #print(\"Found in description: \" + aliases[0] + \" \" + cur)\n",
+    "            elif len(str(cur))>3 and str(cur).lower() in descriptionStr and str(cur).lower() not in common_words:\n",
+    "                lower = str(cur).lower()\n",
+    "                countDescription = (descriptionStr.count(\" \" + lower + \" \") + descriptionStr.count(\" \" + lower + \".\") + \\\n",
+    "                                    descriptionStr.count(\" \" + lower + \",\") + descriptionStr.count(\" \" + lower + \"'\") + \\\n",
+    "                                    descriptionStr.count(\" \" + lower + \"/\") + descriptionStr.count(\"/\" + lower + \" \") + \\\n",
+    "                                    descriptionStr.count(\" \" + lower + \":\") + descriptionStr.count(\"-\" + lower + \" \") + \\\n",
+    "                                    descriptionStr.count(\"(\" + lower + \")\") + descriptionStr.count(\"\\\"\" + lower + \"\\\"\"))\n",
+    "                if countDescription != 0:\n",
+    "                    count[alias_list.index(aliases)] += countDescription\n",
+    "                    #print(\"Found in description (lowercase): \" + aliases[0] + \" \" + cur)\n",
+    "                    \n",
     "    sort = sorted(zip(count, genes), reverse=True)\n",
     "    count = 0\n",
     "    r = []\n",
     "    print_stuff = []\n",
     "    for x in sort:\n",
-    "        if count >= 3:\n",
+    "        if count >= 3 or x[0]==0:\n",
     "            break\n",
     "        elif x[1] not in results:\n",
     "            r.append(x)\n",
@@ -297,17 +363,21 @@
     "            count += 1\n",
     "        elif x[1] in results:\n",
     "            print_stuff.append(x)\n",
-    "\n",
+    "    \n",
+    "    #print(\"r:\")\n",
+    "    #for x in r:\n",
+    "    #    print(x)\n",
+    "    \n",
     "    for x in r:\n",
-    "        if int(x[0]) >= target_frequency:\n",
-    "            #print(x[1] + \" appended\")\n",
+    "        if x[0] >= target_frequency:\n",
     "            results.append(x[1])\n",
-    "        elif int(x[0] > 0) and len(results) == 0:\n",
+    "        elif x[0] > 0 and len(results) < 3:\n",
+    "            results.append(x[1])\n",
+    "        elif x[0] > 0 and len(results) >=3:\n",
     "            results.append(x[1])\n",
     "            break\n",
     "\n",
-    "    #print(print_stuff)\n",
-    "   # print(results)\n",
+    "    print(print_stuff)\n",
     "\n",
     "    return results"
    ]
