--- a/heck/ParsePatent.ipynb
+++ b/heck/ParsePatent.ipynb
@@ -18,7 +18,7 @@
     "    titleStr = driver.title.split(\" - \")[1].strip()\n",
     "    titleStr = titleStr.lower()\n",
     "\n",
-    "    print(titleStr)\n",
+    "    #print(titleStr)\n",
     "    for aliases in alias_list:\n",
     "        for cur_alias in aliases:\n",
     "            cur = str(cur_alias).lower()\n",
@@ -42,7 +42,7 @@
     "    if not abstractStr:\n",
     "        abstractStr = driver.find_element_by_tag_name(\"patent-text\").text\n",
     "    abstractStr = abstractStr.lower()\n",
-    "    print(abstractStr)\n",
+    "    #print(abstractStr)\n",
     "\n",
     "    ## aliases - list of aliases for current gene\n",
     "    ## cur - the current alias that is being looked for in the text\n",
@@ -79,7 +79,7 @@
     "    for x in claimList:\n",
     "        claimStr += x\n",
     "\n",
-    "    print(claimStr)\n",
+    "    #print(claimStr)\n",
     "    for aliases in alias_list:\n",
     "        for cur_alias in aliases:\n",
     "            cur = str(cur_alias).lower()\n",
@@ -101,7 +101,7 @@
     "    desList = descriptionStrInit.split()[:1000]\n",
     "    descriptionStr = ' '.join(map(str, desList))\n",
     "    descriptionStr = descriptionStr.lower()\n",
-    "    print(descriptionStr)\n",
+    "    #print(descriptionStr)\n",
     "    for aliases in alias_list:\n",
     "        for cur_alias in aliases:\n",
     "            cur = str(cur_alias).lower()\n",
@@ -144,7 +144,7 @@
     "        #    results.append(x[1])\n",
     "        #    break\n",
     "\n",
-    "    print(print_stuff)\n",
+    "    print(results)\n",
     "\n",
     "    return results\n",
     "\n",
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c631183",
+   "id": "2986c3c1",
    "metadata": {},
    "outputs": [],
    "source": []
